# rust-by-example-imp

./: README.md
rust-by-example/: Cargo.toml
rust-by-example/array_slice/: Cargo.toml
rust-by-example/array_slice/src/: main.rs
rust-by-example/cfg/: Cargo.toml
rust-by-example/cfg/src/: cfg.rs  my_new_crate.rs
rust-by-example/comment/: Cargo.toml
rust-by-example/comment/src/: main.rs
rust-by-example/conversion/: Cargo.toml
rust-by-example/conversion/src/: expression1.rs  expression2.rs  from_into.rs  from_into2.rs  into.rs  parse.rs  string.rs
rust-by-example/deeply/: Cargo.toml
rust-by-example/deeply/src/: lib.rs
rust-by-example/dev_dependencies/: Cargo.toml
rust-by-example/dev_dependencies/src/: lib.rs
rust-by-example/doc/: Cargo.toml
rust-by-example/doc/src/: lib.rs
rust-by-example/enums/: Cargo.toml
rust-by-example/enums/src/: conditional-enum-variants.rs  consts.rs  enum_work2.rs  link_list.rs  main.rs
rust-by-example/error/: Cargo.toml
rust-by-example/error/src/: boxing_errors.rs  define_error_type.rs  iter_result1.rs  iter_result2.rs  iter_result3.rs  iter_result4.rs  iter_result5.rs  multiple_error_types.rs  option_result1.rs  option_result2.rs  option_unwrap.rs  option_unwrap_and_then.rs  option_unwrap_map.rs  panic.rs  reenter_question_mark.rs  result.rs  result_early_returns.rs  result_enter_question_mark.rs  result_enter_try.rs  result_enter_try2.rs  result_result_alias.rs  result_result_map.rs
rust-by-example/flow_control/: Cargo.toml
rust-by-example/flow_control/src/: binding.rs  for1.rs  for2.rs  for_into_iter.rs  for_iter.rs  for_iter_mut.rs  for_range_inclusive.rs  if_else.rs  if_let1.rs  if_let2.rs  if_let3.rs  loop.rs  loop_nested.rs  loop_return.rs  match.rs  match_destructuring_destructure_enum.rs  match_destructuring_destructure_pointers.rs  match_destructuring_destructure_structures.rs  match_destructuring_destructure_tuple.rs  match_guard.rs  while.rs  while_let1.rs  while_let2.rs
rust-by-example/fn_/: Cargo.toml
rust-by-example/fn_/src/: anonymity.rs  capture1.rs  capture2.rs  capture3.rs  closures.rs  diverging.rs  fn.rs  hof.rs  input_functions.rs  iter_any.rs  iter_find.rs  methods.rs  output_parameters.rs
rust-by-example/generics/: Cargo.toml
rust-by-example/generics/src/: assoc_items_the_problem.rs  assoc_items_types.rs  bounds.rs  gen_fn.rs  gen_trait.rs  generics.rs  impl.rs  multi_bounds.rs  new_types.rs  phantom.rs  phantom_testcase_units.rs  testcase_empty.rs  where.rs
rust-by-example/hello/: Cargo.toml
rust-by-example/hello/src/: main.rs
rust-by-example/hermanradtke/: Cargo.toml
rust-by-example/hermanradtke/src/: string1.rs  string2.rs
rust-by-example/integration_testing/: Cargo.toml
rust-by-example/integration_testing/src/: lib.rs
rust-by-example/integration_testing/tests/: integration_test.rs
rust-by-example/macros/: Cargo.toml
rust-by-example/macros/src/: designators.rs  dry.rs  dsl.rs  macros.rs  overload.rs  repeat.rs  rpn.rs  variadics.rs
rust-by-example/primitives/: Cargo.toml
rust-by-example/primitives/src/: literals.rs  literals2.rs  main.rs
rust-by-example/print/: Cargo.toml
rust-by-example/print/src/: main.rs
rust-by-example/print_debug/: Cargo.toml
rust-by-example/print_debug/src/: debug_pretty.rs  derive.rs  display.rs  display2.rs  display2_simpler.rs  formatting.rs  list.rs  list2.rs  main.rs
rust-by-example/rary/: Cargo.toml
rust-by-example/rary/src/: rary_my.rs
rust-by-example/scope/: Cargo.toml
rust-by-example/scope/src/: borrow.rs  borrow_alias.rs  borrow_freeze.rs  borrow_mut.rs  borrow_ref.rs  drop.rs  lifetime_bounds.rs  lifetime_coercion.rs  lifetime_elision.rs  lifetime_explicit.rs  lifetime_fn.rs  lifetime_methods.rs  lifetime_static.rs  lifetime_struct.rs  move.rs  move_mut.rs  raii.rs
rust-by-example/split_modules/: Cargo.toml
rust-by-example/split_modules/src/: split.rs
rust-by-example/std/: Cargo.toml
rust-by-example/std/src/: box.rs  hash.rs  hash_alt_key_types.rs  hashset.rs  option.rs  panic.rs  question_mark.rs  result.rs  str1.rs  str2.rs  str3.rs  str4.rs  vector.rs
rust-by-example/std_misc/: Cargo.toml
rust-by-example/std_misc/src/: arg.rs  arg_matching.rs  channels.rs  ffi.rs  file_create.rs  file_open.rs  fs.rs  path.rs  process.rs  process_pipe.rs  process_wait.rs  testcase_mapreduce.rs  testcase_mapreduce2.rs  threads.rs
rust-by-example/structures/: Cargo.toml
rust-by-example/structures/src/: main.rs
rust-by-example/testing/: Cargo.toml
rust-by-example/testing/src/: doc_testing.rs  unit_testing.rs  unit_testing_ignored.rs  unit_testing_should_panic.rs
rust-by-example/traits/: Cargo.toml
rust-by-example/traits/src/: derive.rs  trait_clone.rs  trait_drop.rs  trait_iter.rs  trait_ops.rs  traits.rs
rust-by-example/tupels/: Cargo.toml
rust-by-example/tupels/src/: main.rs
rust-by-example/types/: Cargo.toml
rust-by-example/types/src/: alias.rs  cast.rs  inference.rs  literals.rs
rust-by-example/unsafe_/: Cargo.toml
rust-by-example/unsafe_/src/: raw_pointers.rs  unsave_function.rs
rust-by-example/use_/: Cargo.toml
rust-by-example/use_/src/: main.rs
rust-by-example/variable_bindings/: Cargo.toml
rust-by-example/variable_bindings/src/: declare.rs  main.rs  mut.rs  scope.rs
rust-by-example/visibility/: Cargo.toml
rust-by-example/visibility/src/: mod_.rs  struct_visibility.rs  use.rs
