[workspace]

members=[
"hello",
"comment",
"print",
"print_debug",
"primitives",
"tupels",
"array_slice",
"structures",
"enums",
"use_",
"variable_bindings",
"types",
"conversion",
"flow_control",
"fn_",
"hermanradtke",
"visibility",
"split_modules",
"rary",
"cfg",
"generics",
"scope",
"traits",
"macros",
"error",
"std",
"std_misc",
"testing",
"integration_testing",
"dev_dependencies",
"unsafe_",
"doc",
]