[package]
name = "conversion"
version = "0.1.0"
authors = ["Anatolii <java1cprog@yandex.ru>"]
edition = "2018"

[dependencies]

[[bin]]
name ="from_into"
path="src/from_into.rs"

[[bin]]
name ="from_into2"
path="src/from_into2.rs"

[[bin]]
name ="into"
path="src/into.rs"

[[bin]]
name ="string"
path="src/string.rs"

[[bin]]
name ="parse"
path="src/parse.rs"

[[bin]]
name ="expression1"
path="src/expression1.rs"

[[bin]]
name ="expression2"
path="src/expression2.rs"