[package]
name = "error"
version = "0.1.0"
authors = ["Anatolii <java1cprog@yandex.ru>"]
edition = "2018"

[dependencies]

[[bin]]
name="panic"
path="src/panic.rs"

[[bin]]
name="option_unwrap"
path="src/option_unwrap.rs"

[[bin]]
name="option_unwrap_map"
path="src/option_unwrap_map.rs"

[[bin]]
name="option_unwrap_and_then"
path="src/option_unwrap_and_then.rs"

[[bin]]
name="result"
path="src/result.rs"

[[bin]]
name="result_result_map"
path="src/result_result_map.rs"

[[bin]]
name="result_result_alias"
path="src/result_result_alias.rs"

[[bin]]
name="result_early_returns"
path="src/result_early_returns.rs"

[[bin]]
name="result_enter_question_mark"
path="src/result_enter_question_mark.rs"

[[bin]]
name="result_enter_try"
path="src/result_enter_try.rs"

[[bin]]
name="result_enter_try2"
path="src/result_enter_try2.rs"

[[bin]]
name="multiple_error_types"
path="src/multiple_error_types.rs"

[[bin]]
name="option_result1"
path="src/option_result1.rs"

[[bin]]
name="option_result2"
path="src/option_result2.rs"

[[bin]]
name="define_error_type"
path="src/define_error_type.rs"

[[bin]]
name="boxing_errors"
path="src/boxing_errors.rs"

[[bin]]
name="reenter_question_mark"
path="src/reenter_question_mark.rs"

[[bin]]
name="iter_result1"
path="src/iter_result1.rs"

[[bin]]
name="iter_result2"
path="src/iter_result2.rs"

[[bin]]
name="iter_result3"
path="src/iter_result3.rs"

[[bin]]
name="iter_result4"
path="src/iter_result4.rs"

[[bin]]
name="iter_result5"
path="src/iter_result5.rs"