[package]
name = "std_misc"
version = "0.1.0"
authors = ["Anatolii <java1cprog@yandex.ru>"]
edition = "2018"

[dependencies]


[[bin]]
name="threads"
path="src/threads.rs"

[[bin]]
name="testcase_mapreduce"
path="src/testcase_mapreduce.rs"

[[bin]]
name="testcase_mapreduce2"
path="src/testcase_mapreduce2.rs"

[[bin]]
name="channels"
path="src/channels.rs"

[[bin]]
name="path"
path="src/path.rs"

[[bin]]
name="file_open"
path="src/file_open.rs"

[[bin]]
name="file_create"
path="src/file_create.rs"

[[bin]]
name="process"
path="src/process.rs"

[[bin]]
name="process_pipe"
path="src/process_pipe.rs"

[[bin]]
name="fs"
path="src/fs.rs"

[[bin]]
name="arg"
path="src/arg.rs"


[[bin]]
name="arg_matching"
path="src/arg_matching.rs"


[[bin]]
name="ffi"
path="src/ffi.rs"
